--- a/12_sampling.Rmd
+++ b/12_sampling.Rmd
@@ -12,7 +12,7 @@ es heißt eine Stichprobe aus einer Grundgesamtheit/Population zu ziehen.
 
 Wir betrachten dazu als Beispiel das Ziehen aus einer Urne, wobei die Kugeln in der Urne eben die Population darstellen, die uns interessiert. Da wir die Stichprobe digital erzeugen wollen, genauer gesagt mit R, müssen wir uns nach einer digitalen Urne umschauen.
 
-Eine solche findet man im Paket `moderndive`. Die Autoren des Pakets haben auch gemeinsam das Buch [Statistical Inference via Data Science] [@ismay_kim2019] geschrieben. Das Buch ist Grundlagen für diesen Abschnitt. Wer am Ende also noch mehr zu diesem Thema lesen will, sei an das Buch verwiesen.
+Eine solche findet man im Paket `moderndive`. Die Autoren des Pakets haben auch gemeinsam das Buch [@ismay_kim2019] geschrieben. Das Buch ist Grundlagen für diesen Abschnitt. Wer am Ende also noch mehr zu diesem Thema lesen will, sei an das Buch verwiesen.
 
 Nun aber zurück zur digitalen Urne
 
@@ -25,13 +25,18 @@ Nach einem ersten Blick auf die Urne, entstehen eine Reihe von Fragen
 
 
 
-> 1. Wie viele Farben gibt es in der Urne?
+::: {.content-box-blue}
+
+Wie viele Farben gibt es in der Urne?
 
 ```{r}
 unique(bowl$color)
 ```
 
-> 2. Wie hoch ist der Anteil roter Kugeln?
+Wie hoch ist der Anteil roter Kugeln?
+
+:::
+
 
 Da es sich um eine digitale Urne handelt, ist das Zählen schnell geschehen und daher kein Problem für uns. Wir können also leicht eine __Vollerhebung__ der Population durchführen. Den Anteil roter Kugeln berechnen wir mithilfe der Funktion `summarise()` (wir fassen den Inhalt der Urne zusammen, indem wir dir relative Häufigkeit roter Kugeln berechnen). Daher laden wir zunächst `tidyverse`
 
@@ -52,7 +57,12 @@ bowl %>%
 In Realität würde aber wohl niemand gerne alle 2400 Kugeln bzgl. ihrer Farbe überprüfen. Daher ist vermutlich nur eine _Stichprobe_ eine realistische Option. Mithilfe dieser Stichprobe wollen wir aber weiterhin eine sinnvolle Antwort auf die 
 Frage
 
-> 2. Wie hoch ist der Anteil roter Kugeln?
+
+::: {.content-box-blue}
+
+Wie hoch ist der Anteil roter Kugeln?
+
+:::
 
 geben. 
 
@@ -116,7 +126,7 @@ Nun sind wir in der Lage für jede der 1000 Stichproben den  empirischen Schätz
 
 $$\hat \theta = \overline x_n = \frac{1}{n}\sum_{i=1}^n x_i,$$
 
-mit $x_i =\begin{cases} 1, \text{Kugel ist rot}\\0, \text{sonst}\end{cases}$, zu berechnen. Anschließend können in jedem der drei Fälle (unterschiedleich Stichprobenlänge) die empirische Standardabweichung der 1000 berechneten Schätzwerte
+mit $x_i =\begin{cases} 1, \text{Kugel ist rot}\\0, \text{sonst}\end{cases}$, zu berechnen. Anschließend können in jedem der drei Fälle (unterschiedliche Stichprobenlänge) die empirische Standardabweichung der 1000 berechneten Schätzwerte
 berechnen
 
 ```{r}
@@ -171,9 +181,9 @@ stp_100 %>%
   
 ```
 
-Wir erkennen eine Reduktion der Streuung mit wachsendem Stichproben Umfang. Zudem sehen wir, dass wir die empirischen Verteilung symmetrisch um den wahren Parameter 0.375 verteilt sind, wobei die Verteilung umso konzentrierter ist, je hoher der Stichprobenumfang ist. 
+Wir erkennen eine Reduktion der Streuung mit wachsendem Stichproben Umfang. Zudem sehen wir, dass die empirischen Verteilungen symmetrisch um den wahren Parameter 0.375 verteilt sind, wobei die Verteilung umso konzentrierter ist, je hoher der Stichprobenumfang ist. 
 
-Diese empirischen Verteilungen sind eine Annährung an die Verteilung des Schätzers
+Diese empirischen Verteilungen sind eine Annäherung an die Verteilung des Schätzers
 
 $$\overline X_n = \frac{1}{n} \sum_{i=1}^n X_i\,,$$
 
@@ -202,7 +212,7 @@ Dazu benötigen wir aber sicherlich die Verteilung - wir wollen ja eine Aussage 
 :::
 
 
-In der Vorlesung werden wir uns mit Statistik beschäftigen, deren exakte Verteilung wir bestimmen können. In den nächsten zwei Abschnitten werden wir approximative Verteilungen betrachten. Zunächst in einem theoretischen Ansatz basierend auf dem zentralen Grenzwertsatz und anschließend über ein computerintensives Verfahren.
+In der Vorlesung werden wir uns mit Statistiken beschäftigen, deren exakte Verteilung wir bestimmen können. In den nächsten zwei Abschnitten werden wir approximative Verteilungen betrachten. Zunächst in einem theoretischen Ansatz basierend auf dem zentralen Grenzwertsatz und anschließend über ein computerintensives Verfahren.
 
 
 ## Approximative Verteilung
@@ -235,9 +245,8 @@ $$P\left(n \frac{\overline X_n - \theta}{\sqrt{\theta(1-\theta)n }} \leq x\right
 
 $$P\left(\overline X_n  \leq x\right) \approx \Phi_{\widehat \theta,\frac{\widehat \theta(1-\widehat \theta)}{n}}(x)$$
 
-Für die Stichprobenlänge 100 versuchen wir diesen Zusammenhang mal noch zu visualisieren
-
-```{r}
+Für die Stichprobenlänge 100 visualisieren wir diesen Zusammenhang 
+```{r, warning=FALSE}
 sample <- stp_100 %>%
   summarise(prop = sum(color == "red") / 100) 
 theta_hat <- mean(sample$prop)
@@ -246,7 +255,8 @@ theta_hat <- mean(sample$prop)
 stp_100 %>%
   summarise(prop = sum(color == "red") / 100) %>%
   ggplot() + 
-  geom_histogram(aes(x = prop, y = ..density..), binwidth = 0.05, color = "white") +
+  geom_histogram(aes(x = prop, y = ..density..), binwidth = 0.02,
+                 color = "white") +
   xlim(0.01, 0.8) +
   stat_function(fun = "dnorm", 
                 args = list(mean = theta_hat, 
@@ -262,7 +272,7 @@ Wir erkennen eine rechte gute Übereinstimmung zwischen der __Sampling Verteilun
 
 ## Resampling
 
-Nun wollen wir die Verteilung der Statistik (immer noch das empirische Mittel $\overline X_n$) über ein resampling Verfahren approximieren. Dabei ist es allerdings nicht entscheidend, dass es sich bei der betrachteten Statistik um das empirische Mittel handelt. Das Verfahren funktioniert auch für weitere Statistik.
+Nun wollen wir die Verteilung der Statistik (immer noch das empirische Mittel $\overline X_n$) über ein resampling Verfahren approximieren. Dabei ist es allerdings nicht entscheidend, dass es sich bei der betrachteten Statistik um das empirische Mittel handelt. Das Verfahren funktioniert auch für weitere Statistiken.
 
 
 Wir starten mit __einer__ Stichprobe der Länge 100
@@ -276,7 +286,8 @@ x <- bowl %>%
 
 Unser Ziel ist es nun, basierend auf diesen 100 Beobachtungen, die Verteilung von $\overline X_n$ zu approximieren. Dazu benötigen wir sicherlich mehrere berechnete Werte des empirischen Mittels. Natürlich könnten wir die ursprüngliche Stichprobe in 50 Paare zerlege und so 50 empirische Mittelwerte $\overline x_2^1,\dots,\overline x_2^{50}$ berechnen. Damit könnten wir dann aber nur die Verteilung von $\overline X_2$ approximieren und nicht von $\overline X_{100}$. D.h. wir wollen mehrere empirische Mittelwerte basierend auf 100 Inputwerten berechnen. 
 
-Dieses Ziel werden wir nur erreichen, wenn wir die ursprünglichen 100 Werte $x_1,\dots, x_n$ in "schlauer" Form mehrfach nutzen. Wir stellen uns auf den Standpunkt, dass die 100 Werte Realisierungen von unabhängigen und identisch verteilten Zufallsvariablen sind (das ist auch die Annahme in unserem statistischen Modell). Unsere Stichprobe ist somit eine gute Approximation der Gesamtpopulation - auf jeden Fall die beste, die wir haben - und daher würde es Sinn machen wiederholt aus dieser Näherung zu ziehen und dabei die Aufteilung in rote und weiße Kugeln nicht zu verändern. Wir ziehen somit __mit Zurücklegen__ und erzeugen so $B$ Stichprobenwiederholungen
+Dieses Ziel werden wir nur erreichen, wenn wir die ursprünglichen 100 Werte $x_1,\dots, x_n$ in "schlauer" Form mehrfach nutzen. Wir stellen uns auf den Standpunkt, dass die 100 Werte Realisierungen von unabhängigen und identisch verteilten Zufallsvariablen sind. _Das ist auch die Annahme in unserem statistischen Modell_. 
+Unsere Stichprobe ist somit eine gute Approximation der Gesamtpopulation - auf jeden Fall die beste, die wir haben - und daher würde es Sinn machen wiederholt aus dieser Näherung zu ziehen und dabei die Aufteilung in rote und weiße Kugeln nicht zu verändern. Wir ziehen somit __mit Zurücklegen__ und erzeugen so $B$ Stichprobenwiederholungen
 
 $$x_1^b,\dots,x_n^b,\qquad b = 1,\dots, B\,,$$
 wobei $x_i^b\in\{x_1,\dots, x_n\}$. 
@@ -306,7 +317,7 @@ mean_x_B
 
 
 ::: {.content-box-orange}
-Das beschriebene Verfahren kennt man in der Literatur unter dem Namen [__Bootstrap-Verfahren__](https://de.wikipedia.org/wiki/Bootstrapping-Verfahren). Konkret handelt es sich hierbei um die einfachste Form, einen i.i.d. (_independent identically distributed_) Bootstrap. Die daraus resultierende Approximation der Verteilung der Statistik, nennt man __Bootstrap Verteilung__.
+Das beschriebene Verfahren kennt man in der Literatur unter dem Namen [__Bootstrap-Verfahren__](https://de.wikipedia.org/wiki/Bootstrapping-Verfahren) `r emo::ji("boot")`. Konkret handelt es sich hierbei um die einfachste Form, einen i.i.d. (_independent identically distributed_) Bootstrap. Die daraus resultierende Approximation der Verteilung der Statistik, nennt man __Bootstrap Verteilung__.
 
 :::
 
@@ -343,14 +354,14 @@ Dazu erzeugen wir zunächst erneut die Bootstrap Verteilung und nutzen dazu die 
 - `visualise()`: visualisiert die Bootstrap Verteilung der in `calculate()` berechneten Statistik
 
 ```{r, echo=-1}
-set.seed(123)
+set.seed(999)
 boot_vert <- x %>% 
   specify(response = color, success = "red") %>%
   generate(reps = 1000, type = "bootstrap") %>%
   calculate(stat = "prop") 
 
 boot_vert %>%
-  visualise()
+  visualise(bins = 30)
 ```
 
 
@@ -367,13 +378,140 @@ boot_ki
 Das Intervall können wir dann noch zusammen mit der Bootstrap Verteilung visualisieren
 
 ```{r}
-visualise(boot_vert, fill = "red") +
-  shade_confidence_interval(endpoints = boot_ki, color = "gold", fill = "gold") + 
+visualise(boot_vert, bins =30) +
+  shade_confidence_interval(endpoints = boot_ki, color = "gold",
+                            fill = "gold") + 
   theme_minimal()
 ```
 
 
+## Hypothesentest
+
+Bisher haben wir eine Punkt- und Intervallschätzung für den __unbekannten__ (wir nehmen mal an, dass wir nicht die komplette Urne abgezählt haben) Anteil $\theta$ an roten Kugeln in der Urne berechnet.
+
+
+Zum Schluss wollen wir uns noch fragen, ob wir die Annahme
+
+::: {.content-box-blue}
+Der Anteil roter Kugeln in der Urne ist größer als $\frac{1}{3}$.
+:::
+
+statistisch belegen können. Das entsprechende Werkzeug wäre ein geeigneter Hypothesentest. Konkret würden wir mit einem solchen Test gerne folgendes Testproblem
+
+$$H_0: \theta\leq \theta_0\qquad H_1: \theta>\theta_0\,,$$
+mit $\theta_0=\frac{1}{3}$.
+
+Zur Konstruktion von geeigneten Tests kann man verschiedene Ansätze wählen. Eine Möglichkeit stellt die approximative Verteilung der Statistik $\overline X_n$ dar. Unter der Annahme, dass die Nullhypothese $H_0$ korrekt ist (die wird für jeden Hypothesentest angenommen), gilt in diesem Fall 
+
+$$P_{\theta_0}\left(\overline X_n  \leq x\right) \approx \Phi_{\theta_0,\frac{\theta_0(1-\theta_0)}{n}}(x)$$
+::: {.content-box-orange}
+__Bemerkung:__ Warum wir die Grenze $\theta_0$ als wahren Wert wählen, wenn wir annehmen, dass $H_0$ korrekt ist, wird genauer in Kapitel 7 von EWS besprochen.
+:::
+
+
+Für unsere Stichprobe haben wir einen Anteil von
+
+```{r}
+x  %>%
+  summarise(prop = sum(color == "red") / 100)  
+```
+
+erhalten. Dementsprechend wäre die Frage wie groß die Wahrscheinlichkeit 
+$$P_{\theta_0}\left(\overline X_n  \geq 0.36\right)$$
+ist, also die Wahrscheinlichkeit einen Wert so groß wie den beobachteten Stichprobenwert oder noch größer zu sehen. Diese Wahrscheinllichkeit können wir annähern durch
+
+```{r}
+pnorm(0.36, mean = 1/3, sd = sqrt(2/9 / 100), lower.tail = FALSE)
+```
+
+
+Mit einer berechneten Wahrscheinlichkeit von `r pnorm(0.36, mean = 1/3, sd = sqrt(2/9 / 100), lower.tail = FALSE)` scheint ein beobachteter Wert von 0.36 gar nicht so unwahrscheinlich zu sein unter der Annahme, dass der wahre Anteil der Gesamtpopulation $\frac{1}{3}$ ist. Daher gibt die Stichprobe keinen Hinweis darauf, dass die Nullhypothese verworfen werden sollte.
+
+
+Diesen Test hätten wir auch mit der Funktion `prop.test()` durchführen können.
+
+```{r}
+prop.test(x = sum(x$color == "red"), n = 100, p = 1/3, 
+          alternative = "greater", correct = FALSE)
+```
+
+
+Diesen Test konnten wir nur durchführen, da wir eine approximative Verteilung der Teststatistik $\overline X_n$ kannten. Dies ist nicht immer der Fall. Manchmal kennt man:
+
+- die exakte Verteilung  (noch besser `r emo::ji("grinning")`)
+- eine approximative Verteilung, nur unter starken Annahmen an die Verteilung der Stichprobenvariablen
+- keine "theoretische" Verteilung (weder exakt noch approximativ) 
+
+der Teststatistik. In den letzten beiden Fällen bieten Resampling Methoden eine Möglichkeit die Verteilung der Teststatistik zu approximieren.
+
+Diesen Ansatz wollen wir nun noch anhand des vorliegende Testproblem illustrieren. Dazu verwenden wir wieder das `infer` Paket. Neben den bereits bekannten Funktionen benötigen wir noch zusätzlich die `hypothesise()` Funktion, zur Definition der zu testenden Hypothese.
+
+
+```{r}
+null_vert <- x %>% 
+  specify(response = color, success = "red") %>% 
+  hypothesise(null = "point", p = 1/3) %>% 
+  generate(reps = 1000, type = "draw") %>% 
+  calculate(stat = "prop")
+
+```
+
+::: {.content-box-gray}
+__Bemerkung:__ In diesem Fall wurden die Resamples nicht durch Ziehen mit Zurücklegen erzeugt. Vielmehr wurde 1000 Stichproben aus dem Modell 
+
+$$ \left(\{0,1\}^{100}, \mathcal{P}(\{0,1\})^{100}, Binomial\Big(1,\frac{1}{3}\Big)^{\otimes 100}\right)$$
+
+:::
+
+Die Wahrscheinlichkeit $P_{\theta_0}\left(\overline X_n  \geq 0.36\right)$ können wir visuell darstellen
+
+
+```{r}
+null_vert %>%
+  visualise(bins = 30) +
+  shade_p_value(obs_stat = 0.36, direction = "greater")
+```
+
+
+und numerisch ausgeben
+
+```{r}
+null_vert %>% 
+  get_p_value(obs_stat = 0.36, direction = "greater")
+```
+
+
+Der berechnete p-Wert variiert mit jedem Durchlauf. 
+Wiederholt man den ganzen Durchlauf 100 Mal, so erhält man stets unterschiedliche p-Werte, aber stets vergleichbare Werte.
+
+```{r, cache = TRUE}
+df <- data.frame(p_values = numeric(length = 100L))
+for(i in 1:100){
+  null_vert <- x %>% 
+  specify(response = color, success = "red") %>% 
+  hypothesise(null = "point", p = 1/3) %>% 
+  generate(reps = 1000, type = "draw") %>% 
+  calculate(stat = "prop")
+  
+  df$p_values[i] <- null_vert %>% 
+  get_p_value(obs_stat = 0.36, direction = "greater")
+}
+```
+
+Die simulierten p-Wert sind in der nachfolgenden Grafik visualisiert.
+
+```{r}
+df %>% 
+  ggplot(aes(x = seq_along(p_values), y = p_values)) +
+  geom_bar(stat = "identity") + 
+  labs(x = "Durchlauf", y = "p-Wert", title = "Simulationsbasierte p-Werte")
+```
+
+Dies illustriert zudem, dass der p-Wert eine Realisierung eines Zufallsexperiments ist. Dazu mehr in den Übungen zu EWS.
+
+
+
 __Literatur:__
 
-Wer mehr über Bootstrap Verfahren lernen will, kann einen Blick in die Bücher  [@ismay_kim2019] (Web-Version: [Statistical Inference via Data Science] [@ismay_kim2019]), [@davison_hinkley1997] oder [@dikta_scheer2021].
+Wer mehr über Bootstrap Verfahren lernen will, kann einen Blick in die Bücher [@ismay_kim2019] (Web-Version: [Statistical Inference via Data Science](https://moderndive.com/)), [@davison_hinkley1997] oder [@dikta_scheer2021] werfen.
 
